Add modified version of program

--- a/project3/Makefile
+++ b/project3/Makefile
@@ -3,10 +3,20 @@ all:
 %.o: %.cp
 	g++ -c -O2 -Wall -Wextra -pedantic $<
 
+# normal version
 program := lzw435
 program-objects := lzw435.o
 
 $(program) : $(program-objects)
 	g++ $^ -o $@
 
-all: $(program)
+# modified version
+program-m := lzw435m
+program-m-objects := lzw435m.o
+
+$(program-m) : $(program-m-objects)
+	g++ $^ -o $@
+
+m: $(program-m)
+
+all: $(program) $(program-m)
